--- a/styles.css
+++ b/styles.css
@@ -52,6 +52,10 @@
 
   /*general styling*/
 
+  body, html {
+    height: 100%;
+  }
+
   body{
 
     font-size: 1.15rem;
@@ -239,6 +243,7 @@
 
     .your-result{
         place-self: center;
+        margin-top: 1rem;
       }
 
     .results-circle{
