--- a/styles.css
+++ b/styles.css
@@ -214,7 +214,7 @@
   }
 
   .btn:hover, .btn:focus{
-    background-color: hsl(224, 30%, 27%) !important;
+    background: hsl(224, 30%, 27%) !important;
   }
 
 
